<resources>
    <string name="app_name">Stroke App</string>
    <string name="select_language">Select Language\n भाषा का चयन करें</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="pgi">Stroke Services\n Department of Neurology\n PGIMER, Chandigarh</string>
    <string name="software">Managed by Software Community, IIT Ropar</string>
    <string name="association">PGIMER Chandigarh in association with IIT ROPAR</string>
    <string name="acknowledgement_for_online_references">Acknowledgement for online references</string>
    <string name="acknowledgement">

        1. <a href="https://www.moranelderlaw.com/pressure-sores-in-elderly-patients/accessed on
12/12/2017">https://www.moranelderlaw.com/pressure-sores-in-elderly-patients/accessed on
12/12/2017</a>\n\n

        2. <a href="https://woundcareadvisor.com/tips-on-staging-pressure-ulcers-vol4-no4/accessed on
12-12-2017">https://woundcareadvisor.com/tips-on-staging-pressure-ulcers-vol4-no4/accessed on
12-12-2017</a>\n\n


        3. <a href="https://pictures.doccheck.com/com/photo/12983-decubital-ulcer-grade-iii-negative-
pressure-wound-therapy-vacuum-sealing/accessed on 12-12-2017">https://pictures.doccheck.com/com/photo/12983-decubital-ulcer-grade-iii-negative-
        pressure-wound-therapy-vacuum-sealing/accessed on 12-12-2017</a> \n\n


        4. <a href="http://www.lassonde.com/en/blog/can-compare-100-pure-fruit-juices-soft-
drinks/accessed on 12-12-2017"> http://www.lassonde.com/en/blog/can-compare-100-pure-fruit-juices-soft-
drinks/accessed on 12-12-2017</a>\n\n


        5. <a href="https://food.ndtv.com/food-drinks/now-edible-milk-wrapping-to-keep-food-fresh-
1447604/accessed on 12-12-2017">https://food.ndtv.com/food-drinks/now-edible-milk-wrapping-to-keep-food-fresh-
        1447604/accessed on 12-12-2017</a>\n\n


        6. <a href="http://www.ruchiskitchen.com/recipe/kadai-paneer-no-onion-no-garlic-
        recipe/accessed on 12-12-2017">http://www.ruchiskitchen.com/recipe/kadai-paneer-no-onion-no-garlic-recipe/accessed on 12-12-2017</a>\n\n


        7. <a href="https://financialtribune.com/articles/economy-domestic-economy/74392/need-to-
boost-egg-exports-amid-surplus-production/accessed on 12-12-2017">https://financialtribune.com/articles/economy-domestic-economy/74392/need-to-boost-egg-exports-amid-surplus-production/accessed on 12-12-2017</a>\n\n


        8. <a href="http://www.thehealthsite.com/fitness/dal-or-lentils-packing-a-healthy-punch/accessed
on 12-12-2017">http://www.thehealthsite.com/fitness/dal-or-lentils-packing-a-healthy-punch/accessed on 12-12-2017</a>\n\n


        9. <a href="https://jamanetwork.com/journals/jama/fullarticle/203224/accessed on 12-12-2017"> https://jamanetwork.com/journals/jama/fullarticle/203224/accessed on 12-12-2017</a>\n\n


        10. <a href="http://www.oxfordmedicaleducation.com/clinical-skills/procedures/nasogastric-ng-
tube/accessed on 12-12-2017">http://www.oxfordmedicaleducation.com/clinical-skills/procedures/nasogastric-ng-tube/accessed on 12-12-2017</a>\n\n


        11. <a href="https://emedicine.medscape.com/article/80925-technique/accessed on 12-12-2017">https://emedicine.medscape.com/article/80925-technique/accessed on 12-12-2017</a>\n\n

        12. <a href="http://www.topregisterednurse.com/fowlers-position/accessed on 12-12-2017">http://www.topregisterednurse.com/fowlers-position/accessed on 12-12-2017</a>\n\n

        13. <a href="http://brooksidepress.org/nursing_fundamentals_1/?attachment_id=400/accessed on 12-12-2017">http://brooksidepress.org/nursing_fundamentals_1/?attachment_id=400/accessed on 12-12-2017</a>\n\n

        14. <a href="http://www.culinarylore.com/food-history:what-is-malted-milk/accessed on 12-12-2017">http://www.culinarylore.com/food-history:what-is-malted-milk/accessed on 12-12-2017</a>\n\n

        15. <a href="http://www.shopclues.com/protinex-original-400-gm-3.html/accessed on 12-12-2017">http://www.shopclues.com/protinex-original-400-gm-3.html/accessed on 12-12-2017</a>\n\n

        16. <a href="https://rajganpath.com/2011/11/02/the-truth-behind-health-drinks/accessed on 12-12-2017">https://rajganpath.com/2011/11/02/the-truth-behind-health-drinks/accessed on 12-12-2017</a>\n\n

        17. <a href="https://www.beingtheparent.com/daal-ka-paani-for-babies-recipe/accessed on 12-12-2017">https://www.beingtheparent.com/daal-ka-paani-for-babies-recipe/accessed on 12-12-2017</a>\n\n

        18. <a href="https://dir.indiamart.com/jaipur/curd.html/accessed on 12-12-2017">https://dir.indiamart.com/jaipur/curd.html/accessed on 12-12-2017</a>\n\n

        19. <a href="http://www.sakasmilk.com/milk/index.php/lassi/accessed on 12-12-2017">http://www.sakasmilk.com/milk/index.php/lassi/accessed on 12-12-2017</a>\n\n

        20. <a href="http://www.recipetineats.com/custard-creme-anglaise/accessed on 12-12-2017">http://www.recipetineats.com/custard-creme-anglaise/accessed on 12-12-2017</a>\n\n


        21. <a href="https://www.snclubs.com/2012/10/23/how-to-improve-blood-circulation-naturally/accessed on 12-12-2017">https://www.snclubs.com/2012/10/23/how-to-improve-blood-circulation-naturally/accessed on 12-12-2017</a>\n\n


        22. <a href="https://themighty.com/2016/06/how-to-answer-rate-your-pain-on-a-scale-of-1-to-10-questions/accessed on 12-12-2017">https://themighty.com/2016/06/how-to-answer-rate-your-pain-on-a-scale-of-1-to-10-questions/accessed on 12-12-2017</a>\n\n

        23. Royalty Free Medical Human Brain HD Footage - Brain (Blue)360 Degree View.Free downloaded from
        <a href="https://WWW.KRITRIM.COM">https://WWW.KRITRIM.COM</a> (Kritrim Vault)\n\n

        24. Rotating Brain Conference. Free Downloaded from <a href="https://www.youtube.com/watch?v=LG4sgtzwAJ8">https://www.youtube.com/watch?v=LG4sgtzwAJ8</a>\n\n</string>
    <string name="title_activity_acknowledgements">Acknowledgements</string>
    <string name="bedsore_img_1">चित्र 1: निचली पीठ, नितम्ब पर बैडसोर की अवस्थाएं</string>
    <string name="bedsore_img_2">चित्र 2: अलग-2 पोजीशन या करवट में बैडसोर बनने वाली जगहें</string>
    <string name="hinditext1">
        <b>What is bedsore?</b>\n\n
        A stroke patient who is in bedridden state can develop wounds on the skin which is
        called a bedsore. Bedsores can develop when skin and underlying parts of the
        patients’ body are compressed between bony prominence (bones on which our body
        is supported) and bed or chair for a prolonged period of time.

        <b>बThere are four stages of development of a bedsore:</b>\n\n
        <b>First Stage:</b> There is no break or tears in the skin. The skin often is reddened and warmer. \n
        <b>Second Stage:</b> There is a breakage in the skin. It may be painful. It can look like a scrape or abrasion, blister in the skin.\n
        <b>Third Stage:</b>  The sore gets worse and extends into the tissue beneath the skin. It may be painful.\n
        <b>Fourth Stage:</b> the pressure sore is very deep, causing extensive damage to deeper tissues, muscles, tendons, bones and joints.\n
    </string>
    <string name="hinditext2">
        <b>चिFigure 1: Different stages of bedsore at buttock region</b>\n\n
    </string>
    <string name="hinditext3">
        <b>Areas of bedsores in different position:</b>\n\n
        There are certain specific areas of the body which are more prone to develop bedsores. These areas are:\n\n
        <b>In flat or sitting position:</b> Back of the head, shoulder, elbow, lower back, buttock, and heel.
\n\n
        <b>In side lying position: </b> Ear, shoulder, elbow, hip, thigh, knee, leg, ankle, and heel.\n\n
    </string>
    <string name="hinditext4">
        <b>Figure 2: Areas of bedsores in different position</b>\n\n
    </string>
</resources>