<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark"
    tools:context="com.mapps.stroleapp.LanguageActivity"
    >

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:id="@+id/select_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/roundbutton"
            android:id="@+id/lang_hindi"
            android:text="@string/hindi"
            android:layout_width="250dp"

            android:layout_marginBottom="100dp"
            android:layout_height="80dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/btn_txt_size_large"/>

        <Button
            android:background="@drawable/roundbutton"
            android:id="@+id/lang_english"
            android:text="@string/english"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/btn_txt_size_large"/>

    </LinearLayout>



    <RelativeLayout
        android:background="@color/color_dark"
        android:layout_margin="@dimen/layout_margin"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorAccent"
            android:text="@string/pgi"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</RelativeLayout>
